--- a/css/fullPage.css
+++ b/css/fullPage.css
@@ -1,7 +1,7 @@
 
 #section0{
 		background-image: url(../img/background.jpg);
-		padding: 30% 0 0 0;
+		padding: 20% 0 0 0;
 		background-repeat:no-repeat;
 		-webkit-background-size:cover;
 		-moz-background-size:cover;
@@ -11,6 +11,11 @@
 
 
 
+	}
+
+	#section1{
+
+		width: 100%;
 	}
 
 	h1 {
@@ -28,14 +33,25 @@
 	}
 
 	#slide1{
-		background-image: url(../img/background.jpg);
-		
+		background-image: url(../img/arArt.jpg);
+		background-repeat:no-repeat;
+		-webkit-background-size:cover;
+		-moz-background-size:cover;
+		-o-background-size:cover;
+		background-size:cover;
+		background-position:center;
 		padding: 6% 0 0 0;
 	}
 
 
 	#slide2{
-		background-image: url(../img/background.jpg);
+		background-image: url(../img/VRvideo.jpg);
+		background-repeat:no-repeat;
+		-webkit-background-size:cover;
+		-moz-background-size:cover;
+		-o-background-size:cover;
+		background-size:cover;
+		background-position:center;
 		padding: 6% 0 0 0;
 	}
 
